[gd_scene load_steps=6 format=3 uid="uid://chv1to5j3ekjf"]

[ext_resource type="Script" path="res://scenes/ui/end_screen/end_screen.gd" id="1_r8r5m"]
[ext_resource type="AudioStream" uid="uid://ctm5xhaoco1c5" path="res://assets/audio/ui/jingles_victory.ogg" id="2_5u2fp"]
[ext_resource type="PackedScene" uid="uid://bxhx1333hebx2" path="res://scenes/component/ui_components/screen_darken/screen_darken_component.tscn" id="2_fgew8"]
[ext_resource type="AudioStream" uid="uid://dc7lyuhkg4dab" path="res://assets/audio/ui/jingles_defeat.ogg" id="3_5rg1j"]
[ext_resource type="PackedScene" uid="uid://dwnwju7rvg8qi" path="res://scenes/ui/audio_button/audio_button.tscn" id="3_s2x7l"]

[node name="EndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_r8r5m")

[node name="VictoryStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_5u2fp")
volume_db = -5.0
bus = &"SFX"

[node name="DefeatStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5rg1j")
volume_db = -5.0
bus = &"SFX"

[node name="ScreenDarkenComponent" parent="." instance=ExtResource("2_fgew8")]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EndScreenPanelContainer" type="PanelContainer" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/EndScreenPanelContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/EndScreenPanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/EndScreenPanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 64
text = "Victory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/EndScreenPanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
text = "You won!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/EndScreenPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" parent="MarginContainer/EndScreenPanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("3_s2x7l")]
unique_name_in_owner = true
layout_mode = 2
text = "Restart Game"

[node name="MainMenuButton" parent="MarginContainer/EndScreenPanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("3_s2x7l")]
unique_name_in_owner = true
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" parent="MarginContainer/EndScreenPanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("3_s2x7l")]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Quit Game"
